# meeting-hive

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  configuration.md  scheduling.md  writing-adapters.md
launchd/: com.USER.meeting-hive.plist
meeting_hive/: __init__.py  __main__.py  autocommit.py  classifier.py  corrector.py  doctor.py  notify.py  paths.py  secrets.py  sync.py  writer.py
meeting_hive/migrations/: __init__.py
meeting_hive/sources/: __init__.py  fathom.py  granola.py  markdown.py
meeting_hive/summarizers/: __init__.py  anthropic.py  ollama.py  openai.py
meeting_hive/vocabs/: __init__.py  sqlite.py  wispr.py
scripts/: install.sh  uninstall.sh
scripts/linux/: install.sh
scripts/macos/: install.sh  uninstall.sh
scripts/windows/: install.ps1
tests/: conftest.py  test_classifier.py  test_corrector.py  test_doctor.py  test_markdown_source.py  test_migrations.py  test_paths.py  test_registries.py  test_secrets.py  test_sqlite_vocab.py  test_sync_dry_run.py  test_writer.py
